# martini

./: .flake8  .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  TODO  _gencodemeta.py  _gensetup.py  _makedist.py  _setversion.py  bibliography.bib  codecov.yml  codemeta.json  doc_todo.txt  mypy.ini  optional_requirements.txt  paper.md  pyproject.toml  requirements.txt  run_stubtest  run_validate_docstrings  scratch.py  setup.py  stubtest_allowlist
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black_pytest.yml  code_quality.yml  lint_and_test.yml  paper_pdf.yml  python-publish.yml
_tests/: k.py  m.py
docs/: beam.rst  conf.py  datacube.rst  martini.rst  noise.rst  requirements.txt  source.rst  spectral_model.rst  sph_kernel.rst
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/_templates/: layout.html
docs/source/beams/: index.rst
docs/source/datacube/: index.rst
docs/source/getting_started/: index.rst
docs/source/global_profile/: index.rst
docs/source/hdf5_output_tips/: index.rst
docs/source/martini/: index.rst
docs/source/modules/: index.rst  martini.beams.rst  martini.datacube.rst  martini.martini.rst  martini.noise.rst  martini.rst  martini.sources.colibre_source.rst  martini.sources.combined_source.rst  martini.sources.eagle_source.rst  martini.sources.fire_source.rst  martini.sources.magneticum_source.rst  martini.sources.rst  martini.sources.simba_source.rst  martini.sources.so_source.rst  martini.sources.sph_source.rst  martini.sources.swiftgalaxy_source.rst  martini.sources.tng_source.rst  martini.spectral_models.rst  martini.sph_kernels.rst
docs/source/noise/: index.rst
docs/source/sources/: index.rst
docs/source/spectral_models/: index.rst
docs/source/sph_kernels/: index.rst
examples/: README  README.rst  martini_TNG.ipynb  martini_eagle.html  martini_eagle.ipynb  martini_fire.ipynb  martini_simba.ipynb  martini_source_injection.ipynb
martini/: L_coords.py  VERSION  _L_align.py  __init__.py  __version__.py  _cartesian_translation.py  _datacube.py  _demo.py  _demo.pyi  _grid_search.py  _integrals.py  _martini.py  _source.py  _tngdemo.py  _unit_conversion.py  _version.py  beams.py  beams.pyi  datacube.py  datacube.pyi  interpolants.py  martini.py  martini.pyi  mochi.py  noise.py  noise.pyi  post_processing.py  radiative_transfer.py  sources.py  spectral_models.py  spectral_models.pyi  sph_kernels.py  sph_kernels.pyi
martini/_sources/: _L_align.py  _cross_source.py  _eagle_source.py  _magicc_source_WIP.py  _magneticum_source.py  _so_source.py  _sph_source.py  _tng_source.py
martini/examples/: example.py
martini/mochi/: _dtypes.py  cell_grid.py  interpolants.py  mochi.py  radiative_transfer.py  refinement.py
martini/sources/: _L_align.py  _L_align.pyi  __init__.py  _cartesian_translation.py  _cartesian_translation.pyi  _cross_source.py  _eagle_source.py  _extra_cartesian_transforms.py  _illustris_tools.py  _magneticum_source.py  _simba_source.py  _single_particle_source.py  _so_source.py  _sph_source.py  colibre_source.py  combined_source.py  eagle_source.py  fire_source.py  magneticum_source.py  simba_source.py  so_source.py  sph_source.py  sph_source.pyi  swiftgalaxy_source.py  tng_source.py
tests/: TODO  conftest.py  k.py  m.py  test_beams.py  test_datacube.py  test_demo.py  test_examples.py  test_fits_compliant.py  test_grid_search.py  test_martini.py  test_mochi.py  test_noise.py  test_sources.py  test_spectral_models.py  test_sph_kernels.py  test_version.py  test_write.py
tests/data/: IC_2574_NA_CUBE_THINGS.HEADER  WALLABY_PILOT_CUTOUT_APPROX.HEADER  comb_10tracks_J1337_28_HI_r10_t90_mg095_2.image.header  comb_10tracks_J1337_28_HI_r10_t90_mg095_2.image.header.permuted
