[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astromartini"
version = "2.1.0"
authors = [
    { name="Kyle Oman", email="kyle.a.oman@durham.ac.uk" },
]
description="Synthetic datacube creation from simulations."
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/kyleaoman/martini"
"Bug Tracker" = "https://github.com/kyleaoman/martini/issues"
"Documentation" = "https://martini.readthedocs.io/en/latest"

[project.optional-dependencies]
hdf5_output = ["h5py"]
eaglesource = [
    "hdecompose",
    "pyread_eagle",
    "eagleSqlTools",
]
tngsource = ["hdecompose", "h5py", "requests", "six"]
magneticumsource = ["g3t"]
simbasource = ["h5py"]
swiftgalaxysource = [
    "swiftsimio",
	"swiftgalaxy",
]
colibresource = [
    "swiftsimio",
    "swiftgalaxy",
    "velociraptor",
]
