[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astromartini"
version = "2.1.15"
authors = [
    { name="Kyle Oman", email="kyle.a.oman@durham.ac.uk" },
]
description="Synthetic datacube creation from simulations."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/kyleaoman/martini"
"Bug Tracker" = "https://github.com/kyleaoman/martini/issues"
"Documentation" = "https://martini.readthedocs.io/en/latest"

[project.optional-dependencies]
hdf5_output = ["h5py"]
eaglesource = [
    "hdecompose",
    "pyread_eagle",
    "eagleSqlTools",
]
tngsource = ["hdecompose", "h5py", "requests", "six"]
magneticumsource = ["g3read"]
simbasource = ["h5py"]
swiftgalaxysource = [
    "swiftsimio",
    "swiftgalaxy",
]
colibresource = [
    "swiftsimio",
    "swiftgalaxy",
    "velociraptor",
]
firesource = [
    "utilities-awetzel",
    "gizmo-analysis",
    "halo-analysis",
]
[tool.ruff]
exclude = ["docs/source/conf.py", "martini/sources/_illustris_tools.py"]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D"]  # , "ANN"]  # get annotations out of stubs first
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/test_*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false  # enable eventually
docstring-code-line-length = "dynamic"

# numpydoc_validation provides many useful rules that ruff does not yet.
# If ruff support for rules improves this can be phased out.
[tool.numpydoc_validation]
checks = [
       "GL01",
       "GL02",
       "GL03",
       "GL05",
       "GL06",
       "GL07",
       "GL08",
       "GL10",
       "SS01",
       "SS02",
       "SS03",
       "SS04",
       "SS05",
       "PR01",
       "PR02",
       "PR03",
       "PR04",
       "PR05",
       "PR06",
       "PR07",
       "PR08",
       "PR09",
       "PR10",
       "RT02",
       "RT03",
       "RT04",
       "RT05",
       "SA02",
       "SA03",
       "SS06",
]
# Don't document class __init__ methods, put the docstring on the class object.
exclude = ['\.__init__$', '\.test_', '_illustris_tools']

[tool.mypy]
ignore_missing_imports = true
# disallow_untyped_defs = true
modules = [
    "martini",
    "martini.beams",
    "martini.datacube",
    "martini.martini",
    "martini.noise",
    "martini.spectral_models",
    "martini.sph_kernels",
    "martini.sources.colibre_source",
    "martini.sources.eagle_source",
    "martini.sources.fire_source",
    "martini.sources.magneticum_source",
    "martini.sources.simba_source",
    "martini.sources.so_source",
    "martini.sources.sph_source",
    "martini.sources.swiftgalaxy_source",
    "martini.sources.tng_source",
    "martini.sources._cartesian_translation",
    "martini.sources._L_align",
    "martini._demo",
]